@@ -1,27 +1,28 @@
 package org.thoughts.on.java.model;
 
-import javax.persistence.EntityManager;
-import javax.persistence.EntityManagerFactory;
-import javax.persistence.Persistence;
+import jakarta.persistence.EntityManager;
+import jakarta.persistence.EntityManagerFactory;
+import jakarta.persistence.Persistence;
 
-import org.apache.log4j.Logger;
-import org.junit.After;
-import org.junit.Assert;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 public class TestUnidirectionalOneToMany {
 
-	Logger log = Logger.getLogger(this.getClass().getName());
+	private final Logger log = LoggerFactory.getLogger(this.getClass());
 
 	private EntityManagerFactory emf;
 
-	@Before
+	@BeforeEach
 	public void init() {
 		emf = Persistence.createEntityManagerFactory("my-persistence-unit");
 	}
 
-	@After
+	@AfterEach
 	public void close() {
 		emf.close();
 	}
@@ -35,25 +36,25 @@ public class TestUnidirectionalOneToMany {
 		em.getTransaction().begin();
 
 		Book b = em.find(Book.class, 1L);
-		
+
 		Review r = new Review();
 		r.setComment("This is a comment");
 		r.setBook(b);
-				
+
 		em.persist(r);
-		
+
 		em.getTransaction().commit();
 		em.close();
-		
+
 		// Get Book entity with Reviews
 		em = emf.createEntityManager();
 		em.getTransaction().begin();
 
 		r = em.find(Review.class, 1L);
-		
+
 		b = r.getBook();
-		Assert.assertEquals(new Long(1), b.getId());
-		
+		Assertions.assertEquals(Long.valueOf(1), b.getId());
+
 		em.getTransaction().commit();
 		em.close();
 	}
