@@ -1,27 +1,28 @@
 package org.thoughts.on.java.model;
 
-import javax.persistence.EntityManager;
-import javax.persistence.EntityManagerFactory;
-import javax.persistence.Persistence;
+import jakarta.persistence.EntityManager;
+import jakarta.persistence.EntityManagerFactory;
+import jakarta.persistence.Persistence;
 
-import org.apache.log4j.Logger;
-import org.junit.After;
-import org.junit.Assert;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 public class TestPrimaryKey {
 
-	Logger log = Logger.getLogger(this.getClass().getName());
+	private final Logger log = LoggerFactory.getLogger(this.getClass());
 
 	private EntityManagerFactory emf;
 
-	@Before
+	@BeforeEach
 	public void init() {
 		emf = Persistence.createEntityManagerFactory("my-persistence-unit");
 	}
 
-	@After
+	@AfterEach
 	public void close() {
 		emf.close();
 	}
@@ -37,22 +38,22 @@ public class TestPrimaryKey {
 		a.setId(1L);
 		a.setFirstName("Thorben");
 		a.setLastName("Janssen");
-		
+
 		log.info("Persist new Author entity.");
 		em.persist(a);
-		
+
 		log.info("Call flush");
 		em.flush();
-		
+
 		em.getTransaction().commit();
 		em.close();
-		
+
 		em = emf.createEntityManager();
 		em.getTransaction().begin();
 
 		a = em.find(Author.class, 1L);
-		Assert.assertEquals(new Long(1), a.getId());
-		
+		Assertions.assertEquals(Long.valueOf(1), a.getId());
+
 		em.getTransaction().commit();
 		em.close();
 	}
